tests/cases/scc/error/0017-duplicatefunc.c
//!necc-dbg @ -as
int
main()
{
	return 0;
}

int
main()
{
	return 0;
}

